--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "blessing-skin-auth-service",
-  "title": "认证服务",
+  "title": "BlessingSkin\\AuthService::general.title",
   "version": "0.1.0",
-  "description": "为第三方应用提供 OAuth, OIDC 和 SAML 认证服务",
+  "description": "BlessingSkin\\AuthService::general.description",
   "author": "Ke Wang",
   "url": "",
   "namespace": "BlessingSkin\\AuthService",
